--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>ExcitingTimes</title>
   <base href="/">
-
+  <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Montserrat|Roboto&display=swap&subset=latin-ext" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
